[FIRST COMMIT] page Layout in css

--- a/index.html
+++ b/index.html
@@ -4,15 +4,25 @@
 		<title>Poch'Lib</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="assets/style/style.css" />
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500;600;700&display=swap" rel="stylesheet">
   	</head>
   	<body>
 		<div id="myBooks">
+			<img src="/assets/img/logo.svg" alt="logo poch lib">
 			<h1 class="title">Poch'Lib</h1>
+
 			<h2 class="h2">Nouveau Livre</h2>
 			<hr>
 			<div id="content">
 				<h2>Ma poch'liste</h2>
 			</div>
 		</div>
+		<script src="assets/js/script.js"></script>
   	</body>
 </html>
