[ADD] Bouton annuler et Rechercher

--- a/index.html
+++ b/index.html
@@ -21,19 +21,18 @@
 			<hr>
 			<div id="content">
 				<h2>Ma poch'liste</h2>
-			</div>
-			<div class="modal">
-				<h2>Rechercher un livre</h2>
-				<form class="search_form"> 
-				
-				<label for="book_title">Titre du Livre :</label>
-				<input name="book_title" type="text" class="search" placeholder="Titre du Livre" required>
-				<label for="author">Auteur :</label>
 
-				<input name="author"type="text"  class="submit" placeholder="Auteur" required>
-				<button type="submit"></button>
-				</form>
+				<div>
+					<h2>Résultat de rechérche</h2>
+					<div id="searchForm"></div>
+					<div id="searchResults">
+					</div>
+				</div>
+			
+
+
 			</div>
+		
 		</div>
 		<script src="assets/js/script.js"></script>
   	</body>
