--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Poch'Lib</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="assets/css/style.css" />
+		<link rel="stylesheet" href="app.css" />
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,6 +23,8 @@
           <h2>Ma poch'liste</h2>
           
    
+
+
             </div></div></div></div>
             
       <script src="assets/js/app.js"></script>
