--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500;600;700&display=swap" rel="stylesheet">
   	</head>
-	  <body>
+	  <body onload=" getPochlistFromStorage();">
       <div id="myBooks">
         <img class="logo" src="assets/img/logo-poch-lib.png" alt="logo poch lib">
         <h1 class="site_title">Poch'Lib</h1>
