--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Poch'Lib</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="index.css" />
+		<link rel="stylesheet" href="/assets/sass/style.css" />
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,6 +22,7 @@
         <hr>
         <div id="content">
           <h2>Ma poch'liste</h2>
+          <hr>
           
           
 
