--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Poch'Lib</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="/assets/sass/style.css" />
+		<link rel="stylesheet" href="/assets/sass/style.css">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -29,7 +29,7 @@
 
         
       </div>
-            
+      </div>     
       <script src="assets/js/app.js"></script>
   
       </body>
